Project

General

Profile

Actions

Bug #50345

closed

mon: new monitors may direct MMonJoin to a peon instead of the leader

Added by Greg Farnum about 3 years ago. Updated almost 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Monitor
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When monitors are joining a cluster, they may send an MMonJoin message to place themselves correctly in the map in either handle_probe_probe() or finish_election(). These messages must be sent to the leader — monitors do not forward each other's messages.

Unfortunately, in these instances they rely on the old behavior that the numerically-first monitor in the quorum will be the leader, by directing it to *quorum.begin(). Fix it so they have the proper leader (it must be transmitted in MMonProbe) and use it.


Related issues 1 (0 open1 closed)

Copied to RADOS - Backport #50406: pacific: mon: new monitors may direct MMonJoin to a peon instead of the leaderResolvedActions
Actions #1

Updated by Greg Farnum about 3 years ago

  • Status changed from New to In Progress
  • Pull request ID set to 40839
Actions #2

Updated by Neha Ojha about 3 years ago

  • Status changed from In Progress to Pending Backport
Actions #3

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50406: pacific: mon: new monitors may direct MMonJoin to a peon instead of the leader added
Actions #4

Updated by Greg Farnum almost 3 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF